--- a/meson.build
+++ b/meson.build
@@ -153,6 +153,15 @@ c64decoderlib = declare_dependency(
         include_directories('lib/c64')
 )
 
+f85decoderlib = declare_dependency(
+    link_with:
+        shared_library('f85decoderlib',
+        [ 'lib/f85/decoder.cc', ],
+        dependencies: [fmtlib, felib, decoderlib]),
+    include_directories:
+        include_directories('lib/f85')
+)
+
 ibmdecoderlib = declare_dependency(
     link_with:
         shared_library('ibmdecoderlib',
@@ -199,6 +208,7 @@ executable('fe-readapple2',        ['src/fe-readapple2.cc'],        dependencies
 executable('fe-readbrother',       ['src/fe-readbrother.cc'],       dependencies: [fmtlib, felib, decoderlib, readerlib, brotherdecoderlib])
 executable('fe-readc64',           ['src/fe-readc64.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib, c64decoderlib])
 executable('fe-readdfs',           ['src/fe-readdfs.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib, ibmdecoderlib])
+executable('fe-readf85',           ['src/fe-readf85.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib, f85decoderlib])
 executable('fe-readibm',           ['src/fe-readibm.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib, ibmdecoderlib])
 executable('fe-readmac',           ['src/fe-readmac.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib, macdecoderlib])
 executable('fe-readzilogmcz',      ['src/fe-readzilogmcz.cc'],      dependencies: [fmtlib, felib, decoderlib, readerlib, zilogmczdecoderlib])
