--- a/meson.build
+++ b/meson.build
@@ -151,15 +151,15 @@ apple2decoderlib = declare_dependency(
        include_directories('lib/apple2')
 )
 
-#brotherdecoderlib = declare_dependency(
-#    link_with:
-#        shared_library('brotherdecoderlib',
-#        [ 'lib/brother/decoder.cc', ],
-#        dependencies: [fmtlib, felib, decoderlib, sqlite]),
-#    include_directories:
-#        include_directories('lib/brother')
-#)
-#
+brotherdecoderlib = declare_dependency(
+   link_with:
+       shared_library('brotherdecoderlib',
+       [ 'lib/brother/decoder.cc', ],
+       dependencies: [fmtlib, felib, decoderlib, sqlite]),
+   include_directories:
+       include_directories('lib/brother')
+)
+
 #brotherencoderlib = declare_dependency(
 #    link_with:
 #        shared_library('brotherencoderlib',
@@ -239,7 +239,7 @@ executable('fe-readaeslanier',     ['src/fe-readaeslanier.cc'],     dependencies
 executable('fe-readamiga',         ['src/fe-readamiga.cc'],         dependencies: [fmtlib, felib, decoderlib, readerlib, amigadecoderlib])
 executable('fe-readampro',         ['src/fe-readampro.cc'],         dependencies: [fmtlib, felib, decoderlib, readerlib, ibmdecoderlib])
 executable('fe-readapple2',        ['src/fe-readapple2.cc'],        dependencies: [fmtlib, felib, decoderlib, readerlib, apple2decoderlib])
-#executable('fe-readbrother',       ['src/fe-readbrother.cc'],       dependencies: [fmtlib, felib, decoderlib, readerlib, brotherdecoderlib])
+executable('fe-readbrother',       ['src/fe-readbrother.cc'],       dependencies: [fmtlib, felib, decoderlib, readerlib, brotherdecoderlib])
 executable('fe-readc64',           ['src/fe-readc64.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib, c64decoderlib])
 executable('fe-readdfs',           ['src/fe-readdfs.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib, ibmdecoderlib])
 executable('fe-readf85',           ['src/fe-readf85.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib, f85decoderlib])
