--- a/meson.build
+++ b/meson.build
@@ -133,14 +133,14 @@ aeslanierdecoderlib = declare_dependency(
        include_directories('lib/aeslanier')
 )
 
-# amigadecoderlib = declare_dependency(
-#    link_with:
-#        shared_library('amigadecoderlib',
-#        [ 'lib/amiga/decoder.cc', ],
-#        dependencies: [fmtlib, felib, decoderlib]),
-#    include_directories:
-#        include_directories('lib/amiga')
-# )
+amigadecoderlib = declare_dependency(
+   link_with:
+       shared_library('amigadecoderlib',
+       [ 'lib/amiga/decoder.cc', ],
+       dependencies: [fmtlib, felib, decoderlib]),
+   include_directories:
+       include_directories('lib/amiga')
+)
 
 # apple2decoderlib = declare_dependency(
 #    link_with:
@@ -236,7 +236,7 @@ executable('fe-erase',             ['src/fe-erase.cc'],             dependencies
 executable('fe-inspect',           ['src/fe-inspect.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib])
 executable('fe-readadfs',          ['src/fe-readadfs.cc'],          dependencies: [fmtlib, felib, decoderlib, readerlib, ibmdecoderlib])
 executable('fe-readaeslanier',     ['src/fe-readaeslanier.cc'],     dependencies: [fmtlib, felib, decoderlib, readerlib, aeslanierdecoderlib])
-# executable('fe-readamiga',         ['src/fe-readamiga.cc'],         dependencies: [fmtlib, felib, decoderlib, readerlib, amigadecoderlib])
+executable('fe-readamiga',         ['src/fe-readamiga.cc'],         dependencies: [fmtlib, felib, decoderlib, readerlib, amigadecoderlib])
 # executable('fe-readampro',         ['src/fe-readampro.cc'],         dependencies: [fmtlib, felib, decoderlib, readerlib, ibmdecoderlib])
 # executable('fe-readapple2',        ['src/fe-readapple2.cc'],        dependencies: [fmtlib, felib, decoderlib, readerlib, apple2decoderlib])
 executable('fe-readbrother',       ['src/fe-readbrother.cc'],       dependencies: [fmtlib, felib, decoderlib, readerlib, brotherdecoderlib])
