Port the Zilog MCZ to the new architecture.

--- a/meson.build
+++ b/meson.build
@@ -214,14 +214,14 @@ macdecoderlib = declare_dependency(
         include_directories('lib/macintosh')
 )
 
-# zilogmczdecoderlib = declare_dependency(
-#     link_with:
-#         shared_library('zilogmczdecoderlib',
-#         [ 'lib/zilogmcz/decoder.cc', ],
-#         dependencies: [fmtlib, felib, decoderlib]),
-#     include_directories:
-#         include_directories('lib/zilogmcz')
-# )
+zilogmczdecoderlib = declare_dependency(
+    link_with:
+        shared_library('zilogmczdecoderlib',
+        [ 'lib/zilogmcz/decoder.cc', ],
+        dependencies: [fmtlib, felib, decoderlib]),
+    include_directories:
+        include_directories('lib/zilogmcz')
+)
 
 # victor9kdecoderlib = declare_dependency(
 #     link_with:
@@ -246,7 +246,7 @@ executable('fe-readf85',           ['src/fe-readf85.cc'],           dependencies
 executable('fe-readfb100',         ['src/fe-readfb100.cc'],         dependencies: [fmtlib, felib, decoderlib, readerlib, fb100decoderlib])
 executable('fe-readibm',           ['src/fe-readibm.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib, ibmdecoderlib])
 executable('fe-readmac',           ['src/fe-readmac.cc'],           dependencies: [fmtlib, felib, decoderlib, readerlib, macdecoderlib])
-# executable('fe-readzilogmcz',      ['src/fe-readzilogmcz.cc'],      dependencies: [fmtlib, felib, decoderlib, readerlib, zilogmczdecoderlib])
+executable('fe-readzilogmcz',      ['src/fe-readzilogmcz.cc'],      dependencies: [fmtlib, felib, decoderlib, readerlib, zilogmczdecoderlib])
 # executable('fe-readvictor9k',      ['src/fe-readvictor9k.cc'],      dependencies: [fmtlib, felib, decoderlib, readerlib, victor9kdecoderlib])
 executable('fe-rpm',               ['src/fe-rpm.cc'],               dependencies: [fmtlib, felib])
 executable('fe-seek',              ['src/fe-seek.cc'],              dependencies: [fmtlib, felib])
