Update Homebrew pls?

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ addons:
         - libsqlite3-dev
         - g++-8
     homebrew:
+        update: true
         packages:
         - ninja
         - meson
