Attempt to generate build artifacts from appveyor.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,3 +15,7 @@ build_script:
   - 'echo building...'
   - '%CYGWIN%\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER; exec 0</dev/null; make"'
 
+artifacts:
+  - path: fluxengine.exe
+    name: fluxengine.exe
+
