Not a fan of this.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,12 +3,12 @@ clone_depth: 1
 
 environment:
   MSYSTEM: MINGW32
-  PATH: c:\msys64\mingw32\bin
 
 init:
   - git config --global core.autocrlf input
 
 install:
+  - set PATH=%PATH%;c:\msys64\mingw32\bin
   - pacman -S make ninja mingw-w64-i686-libusb  mingw-w64-i686-sqlite3 mingw-w64-i686-zlib 
 
 build_script:
